# fox

./: .gitignore  CMakeLists.txt  README.md  configure  configure.ac  fox-config  fox.spec
.github/workflows/: cmake.yml
adie/: Adie.cpp  Adie.h  Adie.stx  CMakeLists.txt  Commands.cpp  Commands.h  FindInFiles.cpp  FindInFiles.h  HelpWindow.cpp  HelpWindow.h  Modeline.cpp  Modeline.h  Preferences.cpp  Preferences.h  ShellCommand.cpp  ShellCommand.h  ShellDialog.cpp  ShellDialog.h  Syntax.cpp  Syntax.h  SyntaxParser.cpp  SyntaxParser.h  TextWindow.cpp  TextWindow.h  adie.1  help.cpp  help.h  help.txt  icons.cpp  icons.h  main.cpp
calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  HelpWindow.cpp  HelpWindow.h  Preferences.cpp  Preferences.h  help.cpp  icons.cpp  icons.h  main.cpp
chart/: CMakeLists.txt  FX2DChart.cpp  FX2DChart.h  FX2DPlot.cpp  FX2DPlot.h  FXAxis.cpp  FXAxis.h  FXChart.cpp  FXChart.h  FXCurve.cpp  FXCurve.h  chart.h  chartdefs.h  charttest.cpp  chartutils.cpp  chartutils.h  icons.cpp  icons.h
controlpanel/: CMakeLists.txt  ControlPanel.1  ControlPanel.cpp  ControlPanel.h
doc/: adie.html  app.html  calc.html  clipboard.html  consulting.html  datatarget.html  doc.html  download.html  draganddrop.html  faq.html  filefuncs.html  focus.html  fonts.html  footer.html  foreword.html  goals.html  gpgkey.html  guiupdate.html  home.html  icons.html  install.html  introduction.html  layout.html  license.html  menu.html  messages.html  news.html  news1.html  news2.html  news3.html  pathfinder.html  projects.html  references.html  registry.html  rex.html  screenshots.html  serialization.html  timers.html  widgets.html  win32.html  (+2 more)
glviewer/: CMakeLists.txt  FXGLCone.cpp  FXGLCone.h  FXGLCube.cpp  FXGLCube.h  FXGLCylinder.cpp  FXGLCylinder.h  FXGLLine.cpp  FXGLLine.h  FXGLPoint.cpp  FXGLPoint.h  FXGLShape.cpp  FXGLShape.h  FXGLSphere.cpp  FXGLSphere.h  FXGLTriangleMesh.cpp  FXGLTriangleMesh.h  glviewer.cpp
include/: FX4Splitter.h  FX7Segment.h  FXAccelTable.h  FXApp.h  FXArray.h  FXArrowButton.h  FXAtomic.h  FXAutoPtr.h  FXAutoThreadStorageKey.h  FXBMPIcon.h  FXBMPImage.h  FXBZFileStream.h  FXBarrier.h  FXBitmap.h  FXBitmapFrame.h  FXBitmapView.h  FXButton.h  FXCURCursor.h  FXCalendar.h  FXCalendarView.h  FXCallback.h  FXCanvas.h  FXCheckButton.h  FXChoiceBox.h  FXColorBar.h  FXColorDialog.h  FXColorList.h  FXColorRing.h  FXColorSelector.h  FXColorWell.h  FXColorWheel.h  FXColors.h  FXComboBox.h  FXCompletion.h  FXComplexd.h  FXComplexf.h  FXComposeContext.h  FXComposite.h  FXCondition.h  FXConsole.h  (+282 more)
lib/: CMakeLists.txt  FX4Splitter.cpp  FX7Segment.cpp  FX885910Codec.cpp  FX885911Codec.cpp  FX885913Codec.cpp  FX885914Codec.cpp  FX885915Codec.cpp  FX885916Codec.cpp  FX88591Codec.cpp  FX88592Codec.cpp  FX88593Codec.cpp  FX88594Codec.cpp  FX88595Codec.cpp  FX88596Codec.cpp  FX88597Codec.cpp  FX88598Codec.cpp  FX88599Codec.cpp  FXAccelTable.cpp  FXApp.cpp  FXArray.cpp  FXArrowButton.cpp  FXAtomic.cpp  FXAutoThreadStorageKey.cpp  FXBMPIcon.cpp  FXBMPImage.cpp  FXBZFileStream.cpp  FXBarrier.cpp  FXBitmap.cpp  FXBitmapFrame.cpp  FXBitmapView.cpp  FXButton.cpp  FXCP1250Codec.cpp  FXCP1251Codec.cpp  FXCP1252Codec.cpp  FXCP1253Codec.cpp  FXCP1254Codec.cpp  FXCP1255Codec.cpp  FXCP1256Codec.cpp  FXCP1257Codec.cpp  (+355 more)
pathfinder/: CMakeLists.txt  CopyDialog.cpp  CopyDialog.h  PathFinder.cpp  PathFinder.h  Preferences.cpp  Preferences.h  PropertyDialog.cpp  PropertyDialog.h  icons.cpp  icons.h
shutterbug/: CMakeLists.txt  ShutterBug.cpp  ShutterBug.h  Snapper.cpp  Snapper.h  icons.cpp  icons.h  shutterbug.1
tests/: CMakeLists.txt  bitmapviewer.cpp  button.cpp  calendar.cpp  codecs.cpp  console.cpp  datatarget.cpp  dctest.cpp  dialog.cpp  dictest.cpp  dirlist.cpp  expression.cpp  format.cpp  foursplit.cpp  gaugetest.cpp  gltest.cpp  groupbox.cpp  half.cpp  header.cpp  hello.cpp  hello2.cpp  iconlist.cpp  image.cpp  imageviewer.cpp  layout.cpp  match.cpp  math.cpp  mditest.cpp  memmap.cpp  minheritance.cpp  parallel.cpp  process.cpp  ratio.cpp  rex.cpp  scan.cpp  scribble.cpp  shutter.cpp  splitter.cpp  switcher.cpp  tabbook.cpp  (+7 more)
utils/: reswrap.1  reswrap.cpp
windows/: vs.sln  vs.vcxproj
windows/BitmapViewer/: BitmapViewer.vcxproj  BitmapViewer.vcxproj.filters
windows/Button/: Button.vcxproj  Button.vcxproj.filters
windows/Calculator/: Calculator.vcxproj  Calculator.vcxproj.filters
windows/Calendar/: Calendar.vcxproj  Calendar.vcxproj.filters
windows/DataTarget/: DataTarget.vcxproj  DataTarget.vcxproj.filters
windows/DirList/: DirList.vcxproj  DirList.vcxproj.filters
windows/Expression/: Expression.vcxproj  Expression.vcxproj.filters
windows/Format/: Format.vcxproj  Format.vcxproj.filters
windows/FourSplit/: FourSplit.vcxproj  FourSplit.vcxproj.filters
windows/GLTest/: GLTest.vcxproj  GLTest.vcxproj.filters
windows/GLViewer/: GLViewer.vcxproj  GLViewer.vcxproj.filters
windows/GaugeTest/: GaugeTest.vcxproj  GaugeTest.vcxproj.filters
windows/GroupBox/: GroupBox.vcxproj  GroupBox.vcxproj.filters
windows/Header/: Header.vcxproj  Header.vcxproj.filters
windows/Hello/: Hello.vcxproj  Hello.vcxproj.filters
windows/Hello2/: Hello2.vcxproj  Hello2.vcxproj.filters
windows/Image/: Image.vcxproj  Image.vcxproj.filters
windows/ImageViewer/: ImageViewer.vcxproj  ImageViewer.vcxproj.filters
windows/Layout/: Layout.vcxproj  Layout.vcxproj.filters
windows/MDITest/: MDITest.vcxproj  MDITest.vcxproj.filters
windows/MappedFile/: mappedfile.vcxproj  mappedfile.vcxproj.filters
windows/PathFinder/: PathFinder.vcxproj  PathFinder.vcxproj.filters
windows/Process/: Process.vcxproj  Process.vcxproj.filters
windows/Ratio/: Ratio.vcxproj  Ratio.vcxproj.filters
windows/Rex/: Rex.vcxproj  Rex.vcxproj.filters
windows/Scribble/: Scribble.vcxproj  Scribble.vcxproj.filters
windows/Shutter/: Shutter.vcxproj  Shutter.vcxproj.filters
windows/ShutterBug/: ShutterBug.vcxproj  ShutterBug.vcxproj.filters
windows/Splitter/: Splitter.vcxproj  Splitter.vcxproj.filters
windows/Switcher/: Switcher.vcxproj  Switcher.vcxproj.filters
windows/XML/: XML.vcxproj  (+1 more)
(+24 files in other folders)
